--- a/frontendd/pubspec.yaml
+++ b/frontendd/pubspec.yaml
@@ -24,12 +24,14 @@ dependencies:
   sidebarx: ^0.17.2
   sliding_clipped_nav_bar: ^3.1.1
   freezed_annotation: ^2.4.1
+  awesome_snackbar_content: ^0.1.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   freezed: ^2.4.5
   build_runner: ^2.4.6
+  on_popup_window_widget: ^0.0.14
 
 flutter:
   uses-material-design: true
