--- a/frontendd/pubspec.yaml
+++ b/frontendd/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   sliding_clipped_nav_bar: ^3.1.1
   freezed_annotation: ^2.4.1
   awesome_snackbar_content: ^0.1.8
+  flutter_screenutil: ^5.9.3
+  font_awesome_flutter: ^10.12.0
+  syncfusion_flutter_sliders: ^32.1.24
+  scroll_wheel_selector: ^0.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
