--- a/frontendd/pubspec.yaml
+++ b/frontendd/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   syncfusion_flutter_sliders: ^32.1.24
   scroll_wheel_selector: ^0.0.4
   fl_chart: ^1.1.1
+  flutter_local_notifications: ^18.0.1
+  timezone: ^0.9.4
+  permission_handler: ^11.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
