--- a/frontendd/pubspec.yaml
+++ b/frontendd/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   cached_network_image: ^3.4.1
   audioplayers: ^6.1.0
+  url_launcher: ^6.3.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
